promo panel height alignment fixes

--- a/assets/scss/nhsblocks/nhsl-blocks.scss
+++ b/assets/scss/nhsblocks/nhsl-blocks.scss
@@ -137,8 +137,12 @@
 }
 
 .nhsuk-promo .nhsuk-promo__content{
+  padding: 0 0 nhsuk-spacing(3) 0;
   .nhsuk-image{
     width: 100%;
+  }
+  .nhsuk-promo__heading, .nhsuk-promo__description {
+    padding: nhsuk-spacing(3) nhsuk-spacing(5) 0 nhsuk-spacing(5);
   }
 }
 
