--- a/assets/scss/nhsblocks/style_variations.scss
+++ b/assets/scss/nhsblocks/style_variations.scss
@@ -116,9 +116,12 @@
 }
 
 // fix for ever diminishing panels
-.wp-block-nhsblock-rowgroup {
+.wp-block-nhsblocks-rowgroup {
   .nhsuk-panel-group {
     padding: 0;
+    .nhsuk-promo {
+      display: flex;
+    }
   }
 }
 
